# agent-command-sync-engine

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.kiro/specs/agent-command-sync-engine/: design.md  requirements.md  spec.json  tasks.md
docs/: AIエージェントカスタムコマンド統一管理.md  specification.md
src/sync_engine/: __init__.py  cli.py  parser.py  repository.py  validation.py
tests/: test_cli.py  test_command_parser.py  test_command_validation.py  test_directory_structure.py  test_project_structure.py
